[package]
name = "thiserror-core"
version = "1.0.50"
authors = ["David Tolnay <dtolnay@gmail.com>", "Florian Uekermann <florian@code.green>"]
categories = ["rust-patterns"]
description = "derive(Error)"
documentation = "https://docs.rs/thiserror"
edition = "2021"
keywords = ["error", "error-handling", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FlorianUekermann/thiserror/tree/1.0.50"
rust-version = "1.56"

[dependencies]
thiserror-impl = { version = "=1.0.50", path = "impl", package = "thiserror-core-impl" }

[dev-dependencies]
anyhow = "1.0.73"
ref-cast = "1.0.18"
rustversion = "1.0.13"
trybuild = { version = "1.0.81", features = ["diff"] }

[workspace]
members = ["impl"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = ["std"]
std = ["thiserror-impl/std"]
